--- a/Module_5_DID/Slides_DID.tex
+++ b/Module_5_DID/Slides_DID.tex
@@ -484,9 +484,10 @@ club on 4th grade reading scores.
 
 \CommentTok{\#the data generating process}
 \NormalTok{scores}\OperatorTok{$}\NormalTok{read4\textless{}{-}(}\DecValTok{85}\OperatorTok{+}\NormalTok{tau}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{treat}
-               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{1}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{15}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{2}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{3}
-               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{4}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{3}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{5}\OperatorTok{+}\NormalTok{(}\DecValTok{3}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{6}
-               \OperatorTok{+}\NormalTok{(}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{7}\OperatorTok{+}\NormalTok{(}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{8}\OperatorTok{+}\NormalTok{(}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{9}\OperatorTok{+}\NormalTok{(}\DecValTok{12}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{10}
+                \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{1}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{15}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{2}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{3}
+               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{4}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{7}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{5}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{13}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{6}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{11}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{7}\OperatorTok{+}\NormalTok{(}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{8}\OperatorTok{+}\NormalTok{(}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{9}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{12}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{10}
                \OperatorTok{+}\NormalTok{scores}\OperatorTok{$}\NormalTok{error)}
 
 \NormalTok{scores}\OperatorTok{$}\NormalTok{year\textless{}{-}}\StringTok{"2001"}
@@ -514,8 +515,9 @@ club on 4th grade reading scores.
 \CommentTok{\#the data generating process}
 \NormalTok{scores}\OperatorTok{$}\NormalTok{read4\textless{}{-}(}\DecValTok{78}
                \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{1}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{15}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{2}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{3}
-               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{4}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{3}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{5}\OperatorTok{+}\NormalTok{(}\DecValTok{3}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{6}
-               \OperatorTok{+}\NormalTok{(}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{7}\OperatorTok{+}\NormalTok{(}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{8}\OperatorTok{+}\NormalTok{(}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{9}\OperatorTok{+}\NormalTok{(}\DecValTok{12}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{10}
+               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{4}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{7}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{5}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{13}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{6}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{11}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{7}\OperatorTok{+}\NormalTok{(}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{8}\OperatorTok{+}\NormalTok{(}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{9}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{12}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{10}
                \OperatorTok{+}\NormalTok{scores}\OperatorTok{$}\NormalTok{error)}
 
 \NormalTok{scores}\OperatorTok{$}\NormalTok{year\textless{}{-}}\StringTok{"2000"}
@@ -572,16 +574,16 @@ club on 4th grade reading scores.
 \\[-1.8ex] & (1) & (2) & (3)\\ 
 \hline \\[-1.8ex] 
  post &  & 7.612$^{***}$ & 7.612$^{***}$ \\ 
-  &  & (1.127) & (1.023) \\ 
+  &  & (1.073) & (1.023) \\ 
   & & & \\ 
- treat & 22.648$^{***}$ & 13.553$^{***}$ &  \\ 
-  & (1.211) & (1.260) &  \\ 
+ treat & 27.482$^{***}$ & 18.387$^{***}$ &  \\ 
+  & (1.141) & (1.200) &  \\ 
   & & & \\ 
  post:treat &  & 9.095$^{***}$ & 9.095$^{***}$ \\ 
-  &  & (1.782) & (1.617) \\ 
+  &  & (1.697) & (1.617) \\ 
   & & & \\ 
- Constant & 80.109$^{***}$ & 72.496$^{***}$ &  \\ 
-  & (0.766) & (0.797) &  \\ 
+ Constant & 76.775$^{***}$ & 69.163$^{***}$ &  \\ 
+  & (0.721) & (0.759) &  \\ 
   & & & \\ 
 \hline \\[-1.8ex] 
 Class FE & No & No & Yes \\ 
@@ -607,11 +609,350 @@ Key assumption:
 \end{itemize}
 \end{frame}
 
+\begin{frame}{Identifying Assumption: Parallel Trends}
+\protect\hypertarget{identifying-assumption-parallel-trends}{}
+\textbf{Absent treatment, the outcome of the treated group would have
+followed a trend that was parallel to that of the control group}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth,height=\textheight]{"images/DIDregressionblank.png"}
+\caption{Green: Never Treated, Red: Treated}
+\end{figure}
+\end{frame}
+
+\begin{frame}{The Parallel Trends Assumption:}
+\protect\hypertarget{the-parallel-trends-assumption}{}
+\begin{itemize}
+\item
+  We are treating the dashed green line as the counterfactual for the
+  treated group
+\item
+  Any deviation from this counterfactual is attributed to the treatment
+  effect
+\item
+  This assumption is straightforward but fundamentally
+  \textbf{untestable}, because we will never actually observe this
+  counterfactual of what would have happened to the treated group had
+  they not been treated.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{DID visually:}
+\protect\hypertarget{did-visually}{}
+\[
+Y_{it}=\beta_0+\beta_1 Post_t+\beta_2 GetsTreat_i+\beta_3 Post_t\times GetsTreat_i+u_{it}
+\] Which number corresponds to which coefficient? \(\Rightarrow\) Top
+Hat
+
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth,height=\textheight]{"images/DIDregression.png"}
+\caption{Green: Never Treated, Red: Treated}
+\end{figure}
+\end{frame}
+
 \begin{frame}{Identifying Assumption:}
 \protect\hypertarget{identifying-assumption-1}{}
-This assumption is best illustrated graphically.
+\[
+Y_{it}=\beta_0+\beta_1 Post_t+\beta_2 GetsTreat_i+\beta_3 Post_t\times GetsTreat_i+u_{it}
+\]
 
-\includegraphics{"C:/Users/Claire/Dropbox/MQE_CI_Fall2020/Lecture Notes/DIDregression.png"}
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth,height=\textheight]{"images/DIDregressionnum.png"}
+\caption{Green: Never Treated, Red: Treated}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Problems with the Parallel Trends assumption}
+\protect\hypertarget{problems-with-the-parallel-trends-assumption}{}
+The parallel trends assumption is a fairly big assumption in many
+circumstances:
+
+\begin{itemize}
+\tightlist
+\item
+  policymakers may select treatment and control based on differences in
+  the anticipated effects of treatment, or pre-existing differences in
+  outcomes
+\end{itemize}
+
+In this case, the parallel trends assumption does not hold.
+\end{frame}
+
+\begin{frame}{Example: Ashenfelter dips}
+\protect\hypertarget{example-ashenfelter-dips}{}
+Individuals who are ``Treated'' by job training programs are often
+individuals who just experienced a ``dip'' in earnings due to a job
+loss. When they get rehired their earnings increase substantially.
+
+\begin{itemize}
+\item
+  If I compare their change in earnings to the change experienced by
+  people who did not sign up for job training, I will see a large
+  differential increase in earnings associated with program
+  participation.
+\item
+  This is due to who selects into training, not the causal effect of
+  training.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Verifying Parallel trends}
+\protect\hypertarget{verifying-parallel-trends}{}
+How can we check to see if the parallel trends assumption is likely to
+hold?
+
+\begin{itemize}
+\item
+  Fundamentally untestable assumption
+\item
+  use deduction to check this assumptions validity.
+\end{itemize}
+
+\(\Rightarrow\) if the pre-treatment trends were parallel between the
+two groups, then wouldn't it stand to reason that the post-treatment
+trends would have been too?
+
+Note: parallel pre-treatment trends does not \textbf{\textit{prove}}
+that the assumption holds. But it does give some confidence that it does
+(absent some unobserved group specific time shock).
+\end{frame}
+
+\begin{frame}{Verifying Parallel trends}
+\protect\hypertarget{verifying-parallel-trends-1}{}
+Including leads into the DiD model is an easy way to check the
+pre-treatment trends. (Lags can also be included to see if treatment
+effect change over time).
+
+Suppose treatment occurs right after period \(t=0\), estimate
+
+\[
+Y_{it}=\beta_0+\beta_2GetsTreat_i+\sum_{t=-n}^m\beta_{3t}Period_t \times GetsTreat_i+\lambda_t+u_{it}.
+\]
+
+If parallel trends holds:
+
+\begin{itemize}
+\item
+  \(E[\hat{\beta}_{3,t<1}]=0\) since there is no treatment in these time
+  periods.
+\item
+  If \(\tau\neq0\), \(E[\hat{\beta}_{3,t>0}]\neq0\).
+\end{itemize}
+
+These results are typically best presented graphically.
+\end{frame}
+
+\begin{frame}{Graphing DID estimates}
+\protect\hypertarget{graphing-did-estimates}{}
+Two main types of graphs
+
+\begin{itemize}
+\item
+  plots of the mean outcome for both the treatment and control for
+  several periods before and after treatment,
+\item
+  and/or a graph that plots the \(\hat{\beta}_{3t}\) estimates from the
+  specification above.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{Simulation: With leads and Lags}
+\protect\hypertarget{simulation-with-leads-and-lags}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{set.seed}\NormalTok{(}\DecValTok{1999}\NormalTok{)}
+\NormalTok{scoresbase\textless{}{-}}\KeywordTok{as.data.frame}\NormalTok{(}\KeywordTok{rep}\NormalTok{(}\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{3}\NormalTok{,}\DecValTok{4}\NormalTok{,}\DecValTok{5}\NormalTok{,}\DecValTok{6}\NormalTok{,}\DecValTok{7}\NormalTok{,}\DecValTok{8}\NormalTok{,}\DecValTok{9}\NormalTok{,}\DecValTok{10}\NormalTok{),}\DataTypeTok{times=}\DecValTok{30}\NormalTok{))}
+\KeywordTok{names}\NormalTok{(scoresbase)\textless{}{-}}\KeywordTok{c}\NormalTok{(}\StringTok{"class"}\NormalTok{)}
+\NormalTok{scoresbase \textless{}{-}}\StringTok{ }\NormalTok{fastDummies}\OperatorTok{::}\KeywordTok{dummy\_cols}\NormalTok{(scoresbase, }\DataTypeTok{select\_columns =} \StringTok{"class"}\NormalTok{)}
+
+\CommentTok{\#suppose teachers in the better performing classes (classes, 7,8,9,10) select to participate in the book club program}
+\NormalTok{scoresbase}\OperatorTok{$}\NormalTok{treat\textless{}{-}}\DecValTok{0}
+\NormalTok{scoresbase}\OperatorTok{$}\NormalTok{treat[scoresbase}\OperatorTok{$}\NormalTok{class}\OperatorTok{\%in\%}\KeywordTok{c}\NormalTok{(}\DecValTok{7}\NormalTok{,}\DecValTok{8}\NormalTok{,}\DecValTok{9}\NormalTok{,}\DecValTok{10}\NormalTok{)]\textless{}{-}}\DecValTok{1}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}[fragile]{Simulation: With leads and Lags}
+\protect\hypertarget{simulation-with-leads-and-lags-1}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{yr\textless{}{-}}\KeywordTok{c}\NormalTok{(}\DecValTok{1995}\NormalTok{,}\DecValTok{1996}\NormalTok{,}\DecValTok{1997}\NormalTok{,}\DecValTok{1998}\NormalTok{,}\DecValTok{1999}\NormalTok{,}\DecValTok{2000}\NormalTok{,}\DecValTok{2001}\NormalTok{,}\DecValTok{2002}\NormalTok{,}\DecValTok{2003}\NormalTok{,}\DecValTok{2004}\NormalTok{,}\DecValTok{2005}\NormalTok{)}
+\NormalTok{tauyr\textless{}{-}}\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{10}\NormalTok{,}\DecValTok{10}\NormalTok{,}\DecValTok{10}\NormalTok{,}\DecValTok{10}\NormalTok{,}\DecValTok{10}\NormalTok{)}
+\NormalTok{yrfe\textless{}{-}}\KeywordTok{c}\NormalTok{(}\DecValTok{72}\NormalTok{,}\DecValTok{77}\NormalTok{,}\DecValTok{75}\NormalTok{,}\DecValTok{79}\NormalTok{,}\DecValTok{81}\NormalTok{,}\DecValTok{79}\NormalTok{,}\DecValTok{83}\NormalTok{,}\DecValTok{77}\NormalTok{,}\DecValTok{82}\NormalTok{,}\DecValTok{84}\NormalTok{,}\DecValTok{81}\NormalTok{)}
+
+\ControlFlowTok{for}\NormalTok{(i }\ControlFlowTok{in} \DecValTok{1}\OperatorTok{:}\DecValTok{11}\NormalTok{)\{}
+\NormalTok{  name\textless{}{-}}\KeywordTok{paste}\NormalTok{(}\StringTok{"scores"}\NormalTok{, yr[i], }\DataTypeTok{sep=}\StringTok{"\_"}\NormalTok{)}
+\NormalTok{  scores\textless{}{-}scoresbase}
+\NormalTok{  scores}\OperatorTok{$}\NormalTok{error\textless{}{-}}\KeywordTok{rnorm}\NormalTok{(}\DecValTok{300}\NormalTok{, }\DataTypeTok{mean=}\DecValTok{0}\NormalTok{, }\DataTypeTok{sd=}\DecValTok{10}\NormalTok{)}
+\NormalTok{  tau\textless{}{-}tauyr[i]}
+\NormalTok{  yearfe\textless{}{-}yrfe[i]}
+  \CommentTok{\#the data generating process}
+\NormalTok{  scores}\OperatorTok{$}\NormalTok{read4\textless{}{-}(yearfe}\OperatorTok{+}\NormalTok{tau}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{treat}\OperatorTok{+}\NormalTok{scores}\OperatorTok{$}\NormalTok{error}
+               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{1}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{15}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{2}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{5}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{3}
+               \OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{4}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{7}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{5}\OperatorTok{+}\NormalTok{(}\OperatorTok{{-}}\DecValTok{13}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{6}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{11}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{7}\OperatorTok{+}\NormalTok{(}\DecValTok{8}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{8}\OperatorTok{+}\NormalTok{(}\DecValTok{10}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{9}
+               \OperatorTok{+}\NormalTok{(}\DecValTok{12}\NormalTok{)}\OperatorTok{*}\NormalTok{scores}\OperatorTok{$}\NormalTok{class\_}\DecValTok{10}\NormalTok{)}
+
+\NormalTok{  scores}\OperatorTok{$}\NormalTok{year\textless{}{-}yr[i]}
+  \KeywordTok{assign}\NormalTok{(name, scores)}
+  \KeywordTok{rm}\NormalTok{(scores)}
+\NormalTok{\}}
+
+\NormalTok{allscores\textless{}{-}}\KeywordTok{rbind}\NormalTok{(scores\_}\DecValTok{1995}\NormalTok{,scores\_}\DecValTok{1996}\NormalTok{,scores\_}\DecValTok{1997}\NormalTok{,scores\_}\DecValTok{1998}\NormalTok{,scores\_}\DecValTok{1999}\NormalTok{,}
+\NormalTok{                 scores\_}\DecValTok{2000}\NormalTok{,scores\_}\DecValTok{2001}\NormalTok{,scores\_}\DecValTok{2002}\NormalTok{,scores\_}\DecValTok{2003}\NormalTok{,scores\_}\DecValTok{2004}\NormalTok{,scores\_}\DecValTok{2005}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}[fragile]{Simulation: With leads and Lags}
+\protect\hypertarget{simulation-with-leads-and-lags-2}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{allscores}\OperatorTok{$}\NormalTok{post\textless{}{-}}\DecValTok{0}
+\NormalTok{allscores}\OperatorTok{$}\NormalTok{post[allscores}\OperatorTok{$}\NormalTok{year}\OperatorTok{\%in\%}\KeywordTok{c}\NormalTok{(}\DecValTok{2001}\NormalTok{,}\DecValTok{2002}\NormalTok{,}\DecValTok{2003}\NormalTok{,}\DecValTok{2004}\NormalTok{,}\DecValTok{2005}\NormalTok{)]\textless{}{-}}\DecValTok{1}
+
+\NormalTok{allscores \textless{}{-}}\StringTok{ }\NormalTok{fastDummies}\OperatorTok{::}\KeywordTok{dummy\_cols}\NormalTok{(allscores, }\DataTypeTok{select\_columns =} \StringTok{"year"}\NormalTok{)}
+
+\NormalTok{regdidall2\textless{}{-}}\KeywordTok{felm}\NormalTok{(read4}\OperatorTok{\textasciitilde{}}\NormalTok{treat}
+                 \OperatorTok{+}\NormalTok{year\_}\DecValTok{1995}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{1996}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{1997}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{1998}\OperatorTok{*}\NormalTok{treat}
+                 \OperatorTok{+}\NormalTok{year\_}\DecValTok{1999}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{2001}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{2002}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{2003}\OperatorTok{*}\NormalTok{treat}
+                 \OperatorTok{+}\NormalTok{year\_}\DecValTok{2004}\OperatorTok{*}\NormalTok{treat}\OperatorTok{+}\NormalTok{year\_}\DecValTok{2005}\OperatorTok{*}\NormalTok{treat,}
+\NormalTok{                 allscores)}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}[fragile]{Simulation: With leads and Lags}
+\protect\hypertarget{simulation-with-leads-and-lags-3}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{stargazer}\NormalTok{( regdidall2, }\DataTypeTok{type=}\StringTok{"latex"}\NormalTok{,}\DataTypeTok{no.space=}\OtherTok{TRUE}\NormalTok{, }\DataTypeTok{header=}\OtherTok{FALSE}\NormalTok{, }\DataTypeTok{single.row=}\OtherTok{TRUE}\NormalTok{, }\DataTypeTok{omit.stat =} \StringTok{"all"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{table}[!htbp] \centering 
+  \caption{} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}}lc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{1}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-2} 
+\\[-1.8ex] & read4 \\ 
+\hline \\[-1.8ex] 
+ treat & 18.774$^{***}$ (1.207) \\ 
+  year\_1995 & $-$5.842$^{***}$ (1.080) \\ 
+  year\_1996 & $-$2.945$^{***}$ (1.080) \\ 
+  year\_1997 & $-$1.696 (1.080) \\ 
+  year\_1998 & 0.027 (1.080) \\ 
+  year\_1999 & 2.636$^{**}$ (1.080) \\ 
+  year\_2001 & 5.125$^{***}$ (1.080) \\ 
+  year\_2002 & $-$2.235$^{**}$ (1.080) \\ 
+  year\_2003 & 1.849$^{*}$ (1.080) \\ 
+  year\_2004 & 4.430$^{***}$ (1.080) \\ 
+  year\_2005 & 2.533$^{**}$ (1.080) \\ 
+  treat:year\_1995 & 0.431 (1.707) \\ 
+  treat:year\_1996 & 1.427 (1.707) \\ 
+  treat:year\_1997 & $-$2.476 (1.707) \\ 
+  treat:year\_1998 & 0.568 (1.707) \\ 
+  treat:year\_1999 & $-$0.573 (1.707) \\ 
+  treat:year\_2001 & 10.204$^{***}$ (1.707) \\ 
+  treat:year\_2002 & 12.290$^{***}$ (1.707) \\ 
+  treat:year\_2003 & 11.188$^{***}$ (1.707) \\ 
+  treat:year\_2004 & 11.186$^{***}$ (1.707) \\ 
+  treat:year\_2005 & 10.217$^{***}$ (1.707) \\ 
+  Constant & 69.542$^{***}$ (0.764) \\ 
+ \hline \\[-1.8ex] 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\end{table}
+\end{frame}
+
+\begin{frame}[fragile]{Simulation: With leads and Lags}
+\protect\hypertarget{simulation-with-leads-and-lags-4}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\#start with plot of group means}
+
+\CommentTok{\#calculateing the mean score for each year by treatment status}
+\NormalTok{grp\_mean\textless{}{-}allscores}\OperatorTok{\%\textgreater{}\%}
+\StringTok{    }\KeywordTok{group\_by}\NormalTok{(year,treat)}\OperatorTok{\%\textgreater{}\%}
+\StringTok{    }\NormalTok{dplyr}\OperatorTok{::}\KeywordTok{summarize}\NormalTok{(}\DataTypeTok{groupmean =} \KeywordTok{mean}\NormalTok{(read4, }\DataTypeTok{na.rm=}\OtherTok{TRUE}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## `summarise()` regrouping output by 'year' (override with `.groups` argument)
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{grp\_mean}\OperatorTok{$}\NormalTok{treat\textless{}{-}}\KeywordTok{as.factor}\NormalTok{(grp\_mean}\OperatorTok{$}\NormalTok{treat)}
+
+\CommentTok{\#difference in means plot}
+\NormalTok{didmeans\textless{}{-}}\KeywordTok{ggplot}\NormalTok{(grp\_mean, }\KeywordTok{aes}\NormalTok{(year, groupmean, }\DataTypeTok{group=}\NormalTok{treat, }\DataTypeTok{color =}\NormalTok{ treat)) }\OperatorTok{+}
+\StringTok{    }\KeywordTok{stat\_summary}\NormalTok{(}\DataTypeTok{geom =} \StringTok{\textquotesingle{}line\textquotesingle{}}\NormalTok{) }\OperatorTok{+}
+\StringTok{    }\KeywordTok{geom\_vline}\NormalTok{(}\DataTypeTok{xintercept =} \DecValTok{2000}\NormalTok{) }\OperatorTok{+}
+\StringTok{    }\KeywordTok{theme\_minimal}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}{Simulation: With leads and Lags}
+\protect\hypertarget{simulation-with-leads-and-lags-5}{}
+\includegraphics[width=0.7\textwidth,height=\textheight]{"Slides_DID_files/figure-beamer/didplot-1.pdf"}
+\end{frame}
+
+\begin{frame}[fragile]{Simulation: With leads and Lags}
+\protect\hypertarget{simulation-with-leads-and-lags-6}{}
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\#plot of differences coefficients}
+
+\NormalTok{res\textless{}{-}}\KeywordTok{coef}\NormalTok{(}\KeywordTok{summary}\NormalTok{(regdidall2))}
+\NormalTok{res\textless{}{-}}\KeywordTok{as.data.frame}\NormalTok{(res)}
+
+\NormalTok{res\textless{}{-}res[}\DecValTok{13}\OperatorTok{:}\DecValTok{22}\NormalTok{,]}
+
+\NormalTok{a\textless{}{-}}\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{,}\DecValTok{0}\NormalTok{)}
+
+\NormalTok{res\textless{}{-}}\KeywordTok{rbind}\NormalTok{(res,a)}
+
+\NormalTok{year\textless{}{-}}\KeywordTok{c}\NormalTok{(}\DecValTok{1995}\NormalTok{,}\DecValTok{1996}\NormalTok{,}\DecValTok{1997}\NormalTok{,}\DecValTok{1998}\NormalTok{,}\DecValTok{1999}\NormalTok{,}\DecValTok{2001}\NormalTok{,}\DecValTok{2002}\NormalTok{,}\DecValTok{2003}\NormalTok{,}\DecValTok{2004}\NormalTok{,}\DecValTok{2005}\NormalTok{,}\DecValTok{2000}\NormalTok{)}
+\NormalTok{res\textless{}{-}}\KeywordTok{cbind}\NormalTok{(res,year)}
+\NormalTok{res}\OperatorTok{$}\NormalTok{ci\textless{}{-}}\FloatTok{1.96}\OperatorTok{*}\NormalTok{res}\OperatorTok{$}\StringTok{\textasciigrave{}}\DataTypeTok{Std. Error}\StringTok{\textasciigrave{}}
+
+\KeywordTok{names}\NormalTok{(res)\textless{}{-}}\KeywordTok{c}\NormalTok{(}\StringTok{"Estimate"}\NormalTok{,}\StringTok{"se"}\NormalTok{, }\StringTok{"t"}\NormalTok{,  }\StringTok{"p"}\NormalTok{, }\StringTok{"year"}\NormalTok{, }\StringTok{"ci"}\NormalTok{)}
+\CommentTok{\# Use 95\% confidence interval instead of SEM}
+\NormalTok{didplot2\textless{}{-}}\KeywordTok{ggplot}\NormalTok{(res, }\KeywordTok{aes}\NormalTok{(}\DataTypeTok{x=}\NormalTok{year, }\DataTypeTok{y=}\NormalTok{Estimate)) }\OperatorTok{+}\StringTok{ }
+\StringTok{    }\KeywordTok{geom\_errorbar}\NormalTok{(}\KeywordTok{aes}\NormalTok{(}\DataTypeTok{ymin=}\NormalTok{Estimate}\OperatorTok{{-}}\NormalTok{ci, }\DataTypeTok{ymax=}\NormalTok{Estimate}\OperatorTok{+}\NormalTok{ci),}\DataTypeTok{width=}\NormalTok{.}\DecValTok{1}\NormalTok{) }\OperatorTok{+}
+\StringTok{    }\KeywordTok{geom\_vline}\NormalTok{(}\DataTypeTok{xintercept =} \DecValTok{2000}\NormalTok{)}\OperatorTok{+}
+\StringTok{      }\KeywordTok{geom\_hline}\NormalTok{(}\DataTypeTok{yintercept =} \DecValTok{0}\NormalTok{)}\OperatorTok{+}
+\StringTok{     }\KeywordTok{geom\_point}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+\end{frame}
+
+\begin{frame}{Simulation: With leads and Lags}
+\protect\hypertarget{simulation-with-leads-and-lags-7}{}
+\includegraphics[width=0.7\textwidth,height=\textheight]{"Slides_DID_files/figure-beamer/didplotb-1.pdf"}
 \end{frame}
 
 \end{document}
